--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   
   <center>
     <h1 class="btn btn-success heading">Cameras de segurança</h1>
-    <h3 id="status" class="btn btn-info">camera da sala</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM1">camera da sala</h3>
     <br>
-    <h3 id="status" class="btn btn-info">camera da cozinha</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM2">camera da cozinha</h3>
     <br>
-    <h3 id="status" class="btn btn-info">camera do quarto 1</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM3">camera do quarto 1</h3>
     <br> 
-    <h3 id="status" class="btn btn-info">camera do quarto 2</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM4">camera do quarto 2</h3>
     <br>
-    <h3 id="status" class="btn btn-info">camera do quintal</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM5">camera do quintal</h3>
     <br> 
-    <h3 id="status" class="btn btn-info">camera do escritório</h3>
+    <h3 id="status" class="btn btn-info" onclick="openCAM6">camera do escritório</h3>
     <br>
   </center>
 
